added POST endpoint for textbook creation
